--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<h1 id="titulo"> Seja Bem Vindo(a)</h1>
 
 	<aside>
-		<div id="menu-opener">
+		<div id="menu-opener" onclick="menuToggle()">
 			<img src="menu.jpg" width="50">
 		</div>
 		<div id="menu-area">
